Policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Policy Violation: Using 'latest' tag is disallowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
      exclude:
        resources:
          namespaces:
            - monitoring
            - argocd
