Policies/require-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-for-requests-and-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Policy Violation: container resources requests and limits are required!"
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"

    - name: prod-strict-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - prod
      validate:
        message: "Production requires stricter limits."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: ">=64Mi"
                    cpu: ">=250m"
                  limits:
                    memory: ">=128Mi"
                    cpu: ">=500m"
      exclude:
        resources:
          namespaces:
            - monitoring
            - argocd
